--- a/using_node/websocket-project/package.json
+++ b/using_node/websocket-project/package.json
@@ -8,5 +8,8 @@
   "keywords": [],
   "author": "aryan",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "ws": "^8.18.0"
+  }
 }
